Осуществил базовые настройки безопасности

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,18 @@ spring.mustache.check-template-location = false
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
 # PostgreSQL configuration.
-spring.datasource.url = jdbc:postgresql://localhost:5432/vaadinstart
-spring.datasource.username = vaadinstart
-spring.datasource.password = vaadinstart
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url = jdbc:postgresql://localhost:5430/traceability
+spring.datasource.username = ssss1231
+spring.datasource.password = ManLiv123
+spring.jpa.hibernate.ddl-auto = none
+spring.main.banner-mode=off
+spring.jpa.show-sql = false
+spring.jpa.open-in-view=false
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 vaadin.allowed-packages = com.vaadin,org.vaadin,com.rena.application
-spring.jpa.defer-datasource-initialization = true
+spring.jpa.defer-datasource-initialization = false
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+logging.level.net.ttddyy.dsproxy.listener=debug
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
